--- a/image-galery/css/style.css
+++ b/image-galery/css/style.css
@@ -21,7 +21,40 @@
     align-items: center;
 }
 
+.header_title {
+    margin-left: 50px;
+}
+
+.header_search {
+    margin-right: 50px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
 .title_text {
     color: white;
     font-size: 32px;
+}
+
+.header_input {
+    width: 200px;
+    padding: 10px;
+    border-radius: 36px;
+    color: #FFA500;
+    font-weight: 550;
+    border: 3px solid #FFA500;
+}
+
+.header_button {
+    width: 60px;
+    height: 30px;
+    font-family: cursive;
+    border: 3px solid #FFA500;
+    border-radius: 30px;
+    transition: 0.5s;
+}
+
+.header_button:hover {
+    background-color: #FFA500;
 }
