--- a/image-galery/css/style.css
+++ b/image-galery/css/style.css
@@ -99,3 +99,57 @@
     cursor: pointer;
     transform: scale(1.04);
 }
+
+/*footer*/
+
+.footer {
+    width: 100%;
+    height: 6em;
+    bottom: 0;
+    background-color: black;
+    border-top: 6px solid #FFA500;
+}
+
+.footer_wrapper {
+    padding-left: 50px;
+    padding-right: 50px;
+    margin: 0 auto;
+    background-color: #2C2C2C;
+    display: flex;
+    height: 100%;
+    max-width: 1280px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer_text_wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer_text {
+    color: #FFA500;
+    font-size: 30px;
+}
+
+.rs_school {
+    width: 100px;
+    transition: 0.5s;
+}
+
+.github {
+    width: 60px;
+    padding: 5px;
+    transition: 0.5s;
+}
+
+.rs_school:hover {
+    background-color: #FFA500;
+    border-radius: 25px;
+}
+
+.github:hover {
+    background-color: #FFA500;
+    border-radius: 50px;
+}
