--- a/memory-game/css/style.css
+++ b/memory-game/css/style.css
@@ -29,3 +29,72 @@
     color: #66FCF1;
     font-size: 36px;
 }
+
+
+
+
+.footer {
+    position: absolute;
+    width: 100%;
+    height: 5em;
+    bottom: 0;
+}
+
+.footer_text_wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer_text {
+    color: #66FCF1;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    transition: 0.7s;
+}
+
+.footer_text:hover {
+    color: #C5C6C7;
+}
+
+.links {
+    margin-left: 50px;
+    margin-right: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.link1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.link2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rs_school {
+    width: 100px;
+    padding: 3px;
+    background-color: #66FCF1;
+    border-radius: 11px;
+    transition: 0.7s;
+}
+
+.rs_school:hover {
+    background-color: #C5C6C7;
+}
+
+.github {
+    background-color: #66FCF1;
+    border-radius: 100%;
+    transition: 0.7s;
+}
+
+.github:hover {
+    background-color: #C5C6C7;
+}
